chore(build,security): Update target SDK to 34 and enhance security configuration
- Update targetSdk from 32 to 34 for Android 14 compliance and Play Store requirements
- Disable cleartext traffic in AndroidManifest.xml to enforce HTTPS-only connections
- Refactor SupabaseClient initialization to fail fast on missing credentials instead of creating dummy clients
- Add input sanitization to search queries in SupabaseDatabaseService to prevent SQL injection attacks
- Improve error handling by throwing IllegalStateException when Supabase credentials are not properly configured
- Add comprehensive logging for credential validation failures to aid debugging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ android {
     defaultConfig {
         applicationId = "com.synapse.social.studioasinc"
         minSdk = 26
-        targetSdk = 32 // Keep 32
+        targetSdk = 34 // Updated to Android 14 for security and Play Store compliance
         versionCode = 15
         versionName = "1.0.0-alpha07"
         multiDexEnabled = true
