--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 		android:label="@string/app_name"
 		android:name=".SynapseApplication"
 		android:requestLegacyExternalStorage="true"
-		android:usesCleartextTraffic="true"
+		android:usesCleartextTraffic="false"
 		android:theme="@style/AppTheme"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true">
